Drawing Layout Added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,9 @@
         <item>Male</item>
         <item>Female</item>
     </string-array>
+    <string name="navigation_drawer_open">Open drawer</string>
+    <string name="navigation_drawer_close">Close drawer</string>
+    <string name="trending">Trending</string>
+    <string name="call_with_astrologer">Call with Astrologer</string>
 
 </resources>
